[tool.poetry]
name = "trip-planner"
version = "0.1.0"
description = "Simple AI trip planner"
authors = ["Jaison <jaisonmlengineer@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
crewai = "0.1.24"
unstructured = "0.10.25"
pyowm = "3.3.0"
python-dotenv = "1.0.0"
langchain-openai = "^0.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
